WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286438
REGRESSION(
288409@main
): Main frame history state may be incorrectly created after navigating back
https://bugs.webkit.org/show_bug.cgi?id=286438
Summary
REGRESSION(288409@main): Main frame history state may be incorrectly created ...
Charlie Wolfe
Reported
2025-01-23 14:29:16 PST
rdar://142134339
Attachments
Add attachment
proposed patch, testcase, etc.
Charlie Wolfe
Comment 1
2025-01-23 14:31:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39465
Charlie Wolfe
Comment 2
2025-01-23 14:34:13 PST
rdar://143418935
EWS
Comment 3
2025-01-23 20:02:17 PST
Committed
289329@main
(50ae75698db1): <
https://commits.webkit.org/289329@main
> Reviewed commits have been landed. Closing PR #39465 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug